infrastructure/predmarkbot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: predmarkbot
  namespace: predmarkbot
spec:
  selector:
    app: predmarkbot
  ports:
    - name: dashboard
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
