infrastructure/predmarkbot/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: predmarkbot
  namespace: predmarkbot
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`predmarkbot.rupan.dev`)
      kind: Rule
      services:
        - name: predmarkbot
          port: 80
  tls:
    secretName: predmarkbot-tls-secret
